--- a/res/menu/activity_camera.xml
+++ b/res/menu/activity_camera.xml
@@ -12,6 +12,16 @@
         android:title="@string/menu_detect_skin" />
     
     <item
+        android:id="@+id/menu_dilation"
+        app:showAsAction="ifRoom|withText"
+        android:title="@string/menu_dilation" />
+    
+    <item
+        android:id="@+id/menu_erosion"
+        app:showAsAction="ifRoom|withText"
+        android:title="@string/menu_erosion" />
+    
+    <item
         android:id="@+id/menu_play"
         app:showAsAction="ifRoom|withText"
         android:title="@string/menu_play" />
