Removed unimportant menu items

--- a/res/menu/activity_camera.xml
+++ b/res/menu/activity_camera.xml
@@ -16,7 +16,7 @@
         app:showAsAction="ifRoom|withText"
         android:title="@string/menu_detect_skin" />
     
-    <item
+    <!-- <item
         android:id="@+id/menu_dilation"
         app:showAsAction="ifRoom|withText"
         android:title="@string/menu_dilation" />
@@ -24,12 +24,7 @@
     <item
         android:id="@+id/menu_erosion"
         app:showAsAction="ifRoom|withText"
-        android:title="@string/menu_erosion" />
-    
-    <item
-        android:id="@+id/menu_play"
-        app:showAsAction="ifRoom|withText"
-        android:title="@string/menu_play" />
+        android:title="@string/menu_erosion" /> -->
     
     <item
         android:id="@+id/menu_next_camera"
