--- a/res/menu/activity_camera.xml
+++ b/res/menu/activity_camera.xml
@@ -25,6 +25,11 @@
         android:id="@+id/menu_toggle_hands"
         app:showAsAction="ifRoom|withText"
         android:title="@string/menu_toggle_hands" />
+    
+    <item
+        android:id="@+id/menu_toggle_dynamic_keypress"
+        app:showAsAction="ifRoom|withText"
+        android:title="@string/menu_toggle_dynamic_keypress" />
         
     <item
         android:id="@+id/menu_erosion"
