--- a/res/menu/activity_camera.xml
+++ b/res/menu/activity_camera.xml
@@ -7,6 +7,11 @@
         android:title="@string/menu_erosion" />
     
     <item
+        android:id="@+id/menu_dilation"
+        app:showAsAction="ifRoom|withText"
+        android:title="@string/menu_dilation" />
+    
+    <item
         android:id="@+id/menu_detect_piano"
         app:showAsAction="ifRoom|withText"
         android:title="@string/menu_detect_piano" />
