--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,6 +2,9 @@
 <resources>
     <color name="red">#FF0000</color>
     <color name="blue">#2196f3</color>
-    <color name="black">#000000</color>
+    <color name="black">#333333</color>
+    <color name="black_static">#222222</color>
+    <color name="black_checked">#111111</color>
     <color name="white">#FFFFFF</color>
+    <color name="grey">#666666</color>
 </resources>
